# thesis-cdt-experiment-mas-memory

./: .env  .env.example  .gitignore  CLAUDE.md  DEVLOG.md  config.py  ground_truth_vuln_files.xlsx  main.py  pyproject.toml  readme.md
.claude/: settings.local.json
File_Free5gc_Vulnerabili/: ANALISI_VULNERABILITA.md  CVE_CVSS.md  Correzzione_Esperto.md  Patch_Spiegazione.md  VALUTAZIONE.md  cve_metrics (1).json  cve_metrics_normalized.json
agents/: _llm_utils.py  agent_runner.py  judge_agent.py  prompts.py
core/: checker.py  loop_controller.py  result_writer.py
docs/: 01_proposta_rubrica_cvss.md  02_risultati_cvss_run1.md  03_discussione_post_01_02.md  04_risultati_cvss_run2.md  05_risultati_cvss_run3.md  06_risultati_cvss_run4.md  07_risultati_cvss_run5_full_context.md  08_risultati_cvss_run6_verifica_indipendente.md  Modelli_hostati_su_ollama.md  README.md  architecture.md  changelog.md  cve_recreation_log.md  experiments_framing.md  findings.md  index_overview.md  metodologia_prompting_scoperta.md  overview.md  overview_call_1.md  overview_call_2.md  overview_call_3.md  overview_sistema.md  presentation_2.html  presentation_4.html  presentation_new.html  presentation_new.md  proposta_rubrica_cvss.md  risultati_template.md  setup.md  status.md  test_prompting_scoperta.md  trascription_call.md
graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
results/: schema_math.json  schema_textual.json
utils/: cvss_eval.py  cvss_utils.py  evaluation_utils.py  experiment_utils.py  (+3 more)
(+1099 files in other folders)
